--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social-network",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://anekens.github.io/social-network",
+  "homepage": "https://pavelmilenki.github.io/SocialNetwork/",
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
