--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://pavelmilenki.github.io/SocialNetwork/",
   "dependencies": {
+    "antd": "^3.26.8",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "react": "^16.9.0",
